--- a/EurekaClient/src/main/resources/application.properties
+++ b/EurekaClient/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8200
+server.port=8500
 eureka.instance.leaseRenewalIntervalInSeconds=120
 eureka.instance.leaseExpirationDurationInSeconds=120
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
-logging.level.it61.springlabs.eurekaclient.Services.HostingService=FULL
+#logging.level.it61.springlabs.eurekaclient.Services.HostingService=FULL
 management.endpoints.web.exposure.include=*
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
