--- a/SpringBootMSC/src/main/resources/application.properties
+++ b/SpringBootMSC/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hospital?useUnicode=true&useJD
 spring.datasource.username=root
 spring.datasource.password=khyzhniak
 spring.datasource.platform=mysql
-spring.application.name=a-bootiful-client
+spring.application.name=lab
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
